--- a/CoreDotnetDockerDemo/Pages/Index.cshtml
+++ b/CoreDotnetDockerDemo/Pages/Index.cshtml
@@ -28,7 +28,7 @@
     <div class="row">
         <div class="content-body">
                 <div class="success-text">Demo- Application  using  Azure DevOps Pipelines</div>
-                <div class="description line-1"> Azure DevOps Pipelines has been successfully setup</div>
+                <div class="description line-1">Microsoft Azure DevOps Pipelines has been successfully setup</div>
                 
             </div>
     </div>
