--- a/CoreDotnetDockerDemo/Pages/Index.cshtml
+++ b/CoreDotnetDockerDemo/Pages/Index.cshtml
@@ -17,13 +17,19 @@
         <div class="cloud-image">
             <img src="~/images/MESSP.png" />
         </div>
-        
+        <div class="content">
+            <div class="tweet-container">
+                <a href="http://twitter.com/intent/tweet/?text=I%20just%20created%20a%20new%20ASP.net%20website%20on%20Azure%20using%20Azure%20DevOps%20Project&hashtags=AzureDevOpsProject%2CVSTS%20%40Azure%20%40VSTS">
+                    <img src="~/images/tweetThis.svg" />
+                </a>
+            </div>
+        </div>
     </div>
     <div class="row">
         <div class="content-body">
-                <div class="success-text">Demo- Application  using  Azure DevOps Pipelines</div>
-                <div class="description line-1">  Demo Azure DevOps Pipelines has been successfully setup</div>
-                
+                <div class="success-text">Deploying to Azure with Azure DevOps Pipelines</div>
+                <div class="description line-1"> Azure DevOps Pipelines has been successfully setup</div>
+                <div class="description line-2"> Your ASP.NET Core app is live on Azure Web Apps</div>
             </div>
     </div>
 </body>
