--- a/CoreDotnetDockerDemo/Pages/Index.cshtml
+++ b/CoreDotnetDockerDemo/Pages/Index.cshtml
@@ -16,6 +16,13 @@
     <div class="main-container">
         <div class="cloud-image">
             <img src="~/images/MESSP.png" />
+<p>
+                        User: <b>demouser@domain.com</b>
+                    </p>
+                    <p>
+                        Password: <b>Pass@word1</b>
+                    </p>
+        
         </div>
         
     </div>
